# n-body

./: .clang-format  .gitignore  CMakeLists.txt  README.md  concat.sh  main.cpp
generator/: CMakeLists.txt  cube.cpp  three_body.cpp
src/: communication.cpp  communication.hpp  config.hpp  data.hpp  input.hpp  logging.cpp  logging.hpp  main.cpp  output.hpp  overloaded.hpp  physical.hpp  random.hpp  random_body.hpp  space.hpp  tree.hpp
test/: test.cpp  tree.cpp
util/: concat.sh
viewer/: viewer.gp
